--- a/resources/views/about.html
+++ b/resources/views/about.html
@@ -12,7 +12,7 @@
   <!-- Alpine.js CDN -->
   <script src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
 
-  @vite(['resources/css/app.css', 'resources/js/app.js'])
+  <!-- @vite(['resources/css/app.css', 'resources/js/app.js']) -->
 </head>
 <body class="antialiased bg-gray-100 dark:bg-gray-900 px-4">
 
